# mcux-sdk-examples

./: .gitignore  LICENSE.htm  README.md
evk9mimx8ulp/: evk9mimx8ulp_example_manifest_v3_14.xml
evkbimxrt1050/: evkbimxrt1050_example_manifest_v3_10.xml  evkbimxrt1050_example_manifest_v3_13.xml  evkbimxrt1050_example_manifest_v3_14.xml
evkbimxrt1050/azure_rtos_examples/azure_iot_embedded_sdk_adu/armgcc/: CMakeLists.txt  MIMXRT1052xxxxx_flexspi_nor.ld  config.cmake  flags.cmake
evkbimxrt1050/demo_apps/led_blinky/armgcc/: CMakeLists.txt  config.cmake  flags.cmake
evkbimxrt1050/eiq_examples/deepviewrt_camera_label_image/armgcc/: CMakeLists.txt  config.cmake  flags.cmake
evkbimxrt1050/eiq_examples/deepviewrt_labelimage/armgcc/: CMakeLists.txt  MIMXRT1052xxxxx_flexspi_nor_sdram.ld  config.cmake  flags.cmake
evkbimxrt1050/eiq_examples/deepviewrt_modelrunner-glow/armgcc/: CMakeLists.txt  config.cmake  flags.cmake
evkbimxrt1050/eiq_examples/deepviewrt_modelrunner-tflite/armgcc/: CMakeLists.txt  config.cmake  flags.cmake
evkbimxrt1050/eiq_examples/glow_lenet_mnist/armgcc/: CMakeLists.txt  config.cmake  flags.cmake
evkbimxrt1050/eiq_examples/mpp_camera_mobilenet_view_tflm/armgcc/: CMakeLists.txt  flags.cmake
evkbimxrt1050/lwip_examples/enet_iperf3/armgcc/: CMakeLists.txt  MIMXRT1052xxxxx_flexspi_nor_ocram_noncacheable.ld  config.cmake  flags.cmake
evkbmimxrt1060/: evkbmimxrt1060_example_manifest_v3_10.xml  evkbmimxrt1060_example_manifest_v3_13.xml  evkbmimxrt1060_example_manifest_v3_14.xml
evkbmimxrt1060/azure_rtos_examples/azure_iot_mqtt/armgcc/: CMakeLists.txt  config.cmake  flags.cmake
evkbmimxrt1060/eiq_examples/deepviewrt_camera_label_image/armgcc/: CMakeLists.txt  MIMXRT1062xxxxx_flexspi_nor_sdram.ld  config.cmake  flags.cmake
evkbmimxrt1060/eiq_examples/deepviewrt_labelimage/armgcc/: CMakeLists.txt  config.cmake  flags.cmake
evkbmimxrt1060/eiq_examples/deepviewrt_modelrunner/armgcc/: CMakeLists.txt  config.cmake  flags.cmake
evkbmimxrt1060/freertos_examples/freertos_hello/armgcc/: CMakeLists.txt
evkbmimxrt1060/mbedtls_examples/mbedtls_selftest/armgcc/: CMakeLists.txt  MIMXRT1062xxxxx_flexspi_nor.ld  config.cmake  flags.cmake
evkbmimxrt1170/: evkbmimxrt1170_example_manifest_v3_10.xml  evkbmimxrt1170_example_manifest_v3_13.xml  evkbmimxrt1170_example_manifest_v3_14.xml
evkbmimxrt1170/eiq_examples/glow_lenet_mnist_camera/armgcc/: CMakeLists.txt  config.cmake  flags.cmake
evkcmimxrt1060/: evkcmimxrt1060_example_manifest_v3_13.xml  evkcmimxrt1060_example_manifest_v3_14.xml
evkcmimxrt1060/edgefast_bluetooth_examples/peripheral_ht/armgcc/: CMakeLists.txt  config.cmake  flags.cmake
evkmcimx7ulp/: evkmcimx7ulp_example_manifest_v3_10.xml  evkmcimx7ulp_example_manifest_v3_13.xml  evkmcimx7ulp_example_manifest_v3_14.xml
evkmcimx7ulp/demo_apps/power_mode_switch/armgcc/: CMakeLists.txt  MCIMX7U5xxxxx_cm4_lpm_flash.ld  MCIMX7U5xxxxx_cm4_lpm_ram.ld  build_all.bat  build_all.sh  config.cmake  flags.cmake  lpm_asm.S
evkmcimx7ulp/demo_apps/wireless_uart_bridge/armgcc/: CMakeLists.txt  config.cmake  flags.cmake
evkmcimx7ulp/multicore_examples/rpmsg_lite_pingpong_rtos/armgcc/: CMakeLists.txt  MCIMX7U5xxxxx_cm4_flash.ld  config.cmake  flags.cmake
evkmcimx7ulp/rtos_examples/freertos_generic/armgcc/: CMakeLists.txt  flags.cmake
evkmcimx7ulp/rtos_examples/freertos_queue/armgcc/: CMakeLists.txt
evkmimx8mm/: evkmimx8mm_example_manifest_v3_10.xml  evkmimx8mm_example_manifest_v3_13.xml  evkmimx8mm_example_manifest_v3_14.xml
evkmimx8mm/demo_apps/sai_low_power_audio/armgcc/: CMakeLists.txt  MIMX8MM6xxxxx_cm4_lpa_ram.ld  config.cmake  flags.cmake
evkmimx8mm/rtos_examples/freertos_hello/armgcc_aarch64/: CMakeLists.txt  build_ddr_debug.sh  build_ddr_release.sh
evkmimx8mm/rtos_examples/freertos_soem_gpio_pulse/armgcc/: CMakeLists.txt  build_debug.bat  build_flash_debug.bat
evkmimx8mn/: evkmimx8mn_example_manifest_v3_10.xml  evkmimx8mn_example_manifest_v3_13.xml  evkmimx8mn_example_manifest_v3_14.xml
evkmimx8mnddr3l/: evkmimx8mnddr3l_example_manifest_v3_10.xml  evkmimx8mnddr3l_example_manifest_v3_13.xml  evkmimx8mnddr3l_example_manifest_v3_14.xml
evkmimx8mnddr3l/demo_apps/sai_low_power_audio/armgcc/: CMakeLists.txt  config.cmake  flags.cmake
evkmimx8mp/: evkmimx8mp_example_manifest_v3_10.xml  evkmimx8mp_example_manifest_v3_13.xml  evkmimx8mp_example_manifest_v3_14.xml
evkmimx8mp/demo_apps/sai_low_power_audio/armgcc/: CMakeLists.txt  MIMX8ML8xxxxx_cm7_lpa_ram.ld  config.cmake  flags.cmake
evkmimx8mp/rtos_examples/freertos_i2c/armgcc/: CMakeLists.txt  flags.cmake
evkmimx8mq/: evkmimx8mq_example_manifest_v3_10.xml  evkmimx8mq_example_manifest_v3_13.xml  evkmimx8mq_example_manifest_v3_14.xml
evkmimx8ulp/: evkmimx8ulp_example_manifest_v3_14.xml
evkmimxrt1010/: evkmimxrt1010_example_manifest_v3_10.xml  evkmimxrt1010_example_manifest_v3_13.xml  evkmimxrt1010_example_manifest_v3_14.xml
evkmimxrt1015/: evkmimxrt1015_example_manifest_v3_10.xml  evkmimxrt1015_example_manifest_v3_13.xml  evkmimxrt1015_example_manifest_v3_14.xml
evkmimxrt1020/: evkmimxrt1020_example_manifest_v3_10.xml  evkmimxrt1020_example_manifest_v3_13.xml  evkmimxrt1020_example_manifest_v3_14.xml
evkmimxrt1024/: evkmimxrt1024_example_manifest_v3_10.xml  evkmimxrt1024_example_manifest_v3_13.xml  evkmimxrt1024_example_manifest_v3_14.xml
evkmimxrt1040/: evkmimxrt1040_example_manifest_v3_10.xml  evkmimxrt1040_example_manifest_v3_13.xml  evkmimxrt1040_example_manifest_v3_14.xml
evkmimxrt1060/: evkmimxrt1060_example_manifest_v3_10.xml  evkmimxrt1060_example_manifest_v3_13.xml  evkmimxrt1060_example_manifest_v3_14.xml
evkmimxrt1060/mcuboot_opensource/armgcc/: CMakeLists.txt  MIMXRT1062xxxxx_flexspi_nor.ld
evkmimxrt1064/: evkmimxrt1064_example_manifest_v3_10.xml  evkmimxrt1064_example_manifest_v3_13.xml  evkmimxrt1064_example_manifest_v3_14.xml
evkmimxrt1160/: evkmimxrt1160_example_manifest_v3_10.xml  evkmimxrt1160_example_manifest_v3_13.xml  (+1 more)
evkmimxrt685/mcuboot_opensource/armgcc/: CMakeLists.txt  build_flash_release.bat  config.cmake  flags.cmake
(+123903 files in other folders)
